hw4 исправлен Enhancement Задача 11